# cajas_acusticas

./: README.md  boxcalculator.html  formulas_calculo_cajas.md  formulas_divisores.md  index.html  package-lock.json  package.json
.github/skills/physics-acoustics/: SKILL.md
backend/: Cargo.toml
backend/src/: auto_params.rs  cajas.rs  curves.rs  divisores.rs  isobaric.rs  lib.rs  radiador.rs
documentation/: Crossovers.docx.md  formulas_calculo_cajas.md
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src/components/: BandpassBoxTab.tsx  BoxParamsForm.tsx  CabinetDiagram.tsx  CabinetTab.tsx  CrossoverTab.tsx  Header.tsx  PortedBoxTab.tsx  SealedBoxTab.tsx  SimulationChart.tsx  SpeakerParamsForm.tsx
src/utils/: acousticMath.ts  presets.ts  reportGenerator.ts  translations.ts  units.ts
src/wasm/: index.ts
